infra/k8s-lke/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: donfra-eng
  labels:
    app.kubernetes.io/name: donfra
    app.kubernetes.io/managed-by: kubectl
