infra/k8s-lke/06-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: donfra-eng
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: doneowth/donfra-api:1.0.13
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
          # livenessProbe:
          #   httpGet:
          #     path: /api/healthz
          #     port: 8080
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          #   failureThreshold: 3
          # readinessProbe:
          #   httpGet:
          #     path: /api/healthz
          #     port: 8080
          #   initialDelaySeconds: 5
          #   periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: donfra-eng
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: api
