infra/k8s-lke/07-ws.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
  namespace: donfra-eng
  labels:
    app: ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws
  template:
    metadata:
      labels:
        app: ws
    spec:
      containers:
        - name: ws
          image: doneowth/donfra-ws:1.0.0
          ports:
            - containerPort: 6789
              name: ws
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          # livenessProbe:
          #   tcpSocket:
          #     port: 6789
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
          # readinessProbe:
          #   tcpSocket:
          #     port: 6789
          #   initialDelaySeconds: 5
          #   periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ws
  namespace: donfra-eng
  labels:
    app: ws
spec:
  type: ClusterIP
  ports:
    - port: 6789
      targetPort: 6789
      name: ws
  selector:
    app: ws
